--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,10 +1,10 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: patrickmonteiro # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: App AbaetéFest
+    url: https://app.abaetefest.com.br/#/
   - name: Wikipedia
     url: https://en.wikipedia.org
   - name: Hacker News
@@ -15,10 +15,10 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+#   cname: demo.upptime.js.org
+  baseUrl: /
+  logoUrl: https://raw.githubusercontent.com/abaetefest/app-abaete-fest/master/public/favicon.ico
+  name: AbaetéFest
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
