--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,13 @@ owner: patrickmonteiro # Your GitHub organization or username, where this reposi
 repo: upptime # The name of this repository
 
 sites:
-  - name: App AbaetéFest
-    url: https://app.abaetefest.com.br/#/
+  # - name: App AbaetéFest
+  #  url: https://app.abaetefest.com.br/#/
   - name: Wikipedia
     url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Site AbaetéFest
+    url: https://abaetefest.com.br/
+
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
