--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,8 @@ repo: upptime # The name of this repository
 sites:
   # - name: App AbaetéFest
   #  url: https://app.abaetefest.com.br/#/
-  - name: Wikipedia
-    url: https://en.wikipedia.org
+  - name: App AbaetéFest (PWA)
+    url: https://app.abaetefest.com.br/#/
   - name: Site AbaetéFest
     url: https://abaetefest.com.br/
 
@@ -18,8 +18,13 @@ status-website:
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/abaetefest/app-abaete-fest/master/public/favicon.ico
   name: AbaetéFest
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**AbaetéFest** - O app Guia da cidade de Abaetetuba."
+  introMessage: Página de Status e Saúde das aplicações
+  metaTags:
+    - name: "color-scheme"
+      content: "dark light"
+    - name: "robots"
+      content: "noindex"
   navbar:
     - title: Status
       href: /
